<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplikasi My Picture Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="HomeActivityTitle">My Picture Dictionary</string>
    <string name="MenuActivityTitle">Menu</string>
    <string name="enter">Enter</string>
    <string name="help">Help</string>
    <string name="dictionary">Dictionary</string>
    <string name="minigames">Mini Games</string>
    <string name="setting">Setting</string>
    <string name="animal">Animal</string>
    <string name="fooddrink">Food and Drink</string>
    <string name="number">Number</string>
    <string name="transportation">Transportation</string>
    <string name="color">Color</string>
    <string name="land">Land</string>
    <string name="air">Air</string>
    <string name="sea">Sea</string>
    <string name="nodata">-</string>
    <string name="playsound">Play Sound</string>
    <string name="question">What is this?</string>
    <string name="next">Next</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="sound">Sound</string>
    
</resources>
