<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >  

    <!-- Included header.xml here -->
	<ViewStub android:id="@+id/vsHeader" 
	    android:inflatedId="@+id/header" 
		android:layout_width="fill_parent" 
		android:layout_height="50dip" 
		android:layout="@layout/header" />

	<LinearLayout android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:padding="6dip"
	    android:background="@drawable/bg">
	    <LinearLayout android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
	        <Button android:id="@+id/btnSatu"
	            style="@style/HomeButton"
	            android:onClick="btnLandClick"
	            android:text="@string/land"
	            android:drawableTop="@drawable/btn_land"/>
	        <Button android:id="@+id/btnDua" 
	            style="@style/HomeButton"
	            android:onClick="btnAirClick"
	            android:text="@string/air"
	            android:drawableTop="@drawable/btn_air"/>
	    </LinearLayout>
	    
	    <LinearLayout android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
	        <Button android:id="@+id/btnTiga" 
	            style="@style/HomeButton"
	            android:onClick="btnSeaClick"
	            android:text="@string/sea"
	            android:drawableTop="@drawable/btn_sea"/>
	    </LinearLayout>
	    
	</LinearLayout>
	
</LinearLayout>  