<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >  

    <!-- Included header.xml here -->
	<ViewStub android:id="@+id/vsHeader" 
	    android:inflatedId="@+id/header" 
		android:layout_width="fill_parent" 
		android:layout_height="50dip" 
		android:layout="@layout/header" />

	<ScrollView android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:padding="15dip"
		android:background="@drawable/bg">
	<LinearLayout android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical" >
		<ImageView android:layout_width="180dip"
	      	android:layout_height="180dip"
	      	android:layout_marginLeft="10dip"
	      	android:layout_marginRight="10dip"
	      	android:layout_gravity="center_horizontal"
	      	android:contentDescription="@string/action_settings"
	      	android:id="@+id/txtImage" />
		
		<TextView android:textSize="@dimen/big_text"
	      	android:layout_width="wrap_content"
	      	android:layout_height="wrap_content"
	      	android:textColor="#FFF"
	      	android:paddingTop="5dip"
	      	android:paddingLeft="10dip"
	      	android:paddingRight="10dip"
	      	android:textStyle="bold"
	      	android:typeface="serif"
	      	android:text="@string/question" />
		
		<RadioGroup android:id="@+id/radioAnswerGroup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	      	android:paddingLeft="10dip" >
	
	        <RadioButton android:id="@+id/choiseA"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	
	        <RadioButton android:id="@+id/choiseB"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        
	        <RadioButton android:id="@+id/choiseC"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	
	        <RadioButton android:id="@+id/choiseD"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	
	    </RadioGroup>
		
	    <Button style="@style/btnStyleSeagull" android:text="@string/next" 
	      	android:layout_marginTop="10dip"
	        android:onClick="btnAnswerClick"/>
	</LinearLayout>
	</ScrollView>
	
</LinearLayout>  